bitkeeper revision 1.756 (40420a7bDsT_OI1_rz4fkewUJosvRA)
xl_evtchn.c, Makefile:
  new file
hypervisor.c, network.c, Makefile:
  Event-channel demuxing in Xenolinux.

--- a/xenolinux-2.4.25-sparse/arch/xeno/Makefile
+++ b/xenolinux-2.4.25-sparse/arch/xeno/Makefile
@@ -48,7 +48,8 @@ HEAD := arch/xeno/kernel/head.o arch/xeno/kernel/init_task.o
 
 SUBDIRS += arch/xeno/kernel arch/xeno/mm arch/xeno/lib
 SUBDIRS += arch/xeno/drivers/console arch/xeno/drivers/network
-SUBDIRS += arch/xeno/drivers/block arch/xeno/drivers/balloon
+SUBDIRS += arch/xeno/drivers/evtchn arch/xeno/drivers/block
+SUBDIRS += arch/xeno/drivers/balloon
 ifdef CONFIG_XENO_PRIV
 SUBDIRS += arch/xeno/drivers/dom0 
 endif
@@ -56,6 +57,7 @@ endif
 CORE_FILES += arch/xeno/kernel/kernel.o arch/xeno/mm/mm.o
 CORE_FILES += arch/xeno/drivers/console/con.o
 CORE_FILES += arch/xeno/drivers/block/blk.o
+CORE_FILES += arch/xeno/drivers/evtchn/evtchn.o
 CORE_FILES += arch/xeno/drivers/network/net.o
 ifdef CONFIG_XENO_PRIV
 CORE_FILES += arch/xeno/drivers/dom0/dom0.o
