--- a/tools/balloon/Makefile
+++ b/tools/balloon/Makefile
@@ -5,8 +5,8 @@ $(TARGET): balloon.c
 	$(CC) -O2 -Wall -o $(TARGET) balloon.c
 
 install: $(TARGET)
-	mkdir -p /usr/bin
-	cp -a $(TARGET) /usr/bin
+	mkdir -p $(prefix)/usr/bin
+	cp -a $(TARGET) $(prefix)/usr/bin
 
 dist: $(TARGET)
 	mkdir -p ../../../install/bin
