--- a/tools/examples/Makefile
+++ b/tools/examples/Makefile
@@ -14,13 +14,13 @@ INITD    = xendomains
 all: 
 
 install: all
-	mkdir -p /usr/bin
-	cp -a $(INSTALL) /usr/bin
+	mkdir -p $(prefix)/usr/bin
+	cp -a $(INSTALL) $(prefix)/usr/bin
 	#chmod 755 $(INSTALL)
-	mkdir -p /etc/xc
-	for i in $(ETC) ; do [ ! -e /etc/xc/$$i ] && echo Install $$i && cp $$i /etc/xc/ ; done || true
-	mkdir -p /etc/xc/auto
-	for i in $(INITD) ; do [ -e /etc/init.d/ ] && [ ! -e /etc/init.d/$$i ] && cp $$i /etc/init.d/ ; done || true
+	mkdir -p $(prefix)/etc/xc
+	for i in $(ETC) ; do [ ! -e $(prefix)/etc/xc/$$i ] && echo Install $$i && cp $$i $(prefix)/etc/xc/ ; done || true
+	mkdir -p $(prefix)/etc/xc/auto
+	for i in $(INITD) ; do [ -e $(prefix)/etc/init.d/ ] && [ ! -e $(prefix)/etc/init.d/$$i ] && cp $$i $(prefix)/etc/init.d/ ; done || true
 
 dist: all
 	mkdir -p ../../../install/bin
