--- a/tools/xc/lib/Makefile
+++ b/tools/xc/lib/Makefile
@@ -1,4 +1,8 @@
 
+MAJOR    = 1.3
+MINOR    = 0
+SONAME   = libxc.so.$(MAJOR)
+
 CC       = gcc
 CFLAGS   = -c -Wall -O3 
 CFLAGS  += -I../../../xen/include -I../../../xenolinux-sparse/include
@@ -6,7 +10,7 @@ CFLAGS  += -I../../../xen/include -I../../../xenolinux-sparse/include
 HDRS     = $(wildcard *.h)
 OBJS     = $(patsubst %.c,%.o,$(wildcard *.c))
 
-LIB      = libxc.so
+LIB      = libxc.so libxc.so.$(MAJOR) libxc.so.$(MAJOR).$(MINOR)
 
 all: check-for-zlib $(LIB)
 
@@ -19,17 +23,17 @@ check-for-zlib:
 	fi
 
 install: all
-	mkdir -p /usr/lib
-	mkdir -p /usr/include
-	cp $(LIB) /usr/lib
-	chmod 755 /usr/lib/$(LIB)
-	cp xc.h /usr/include
-	chmod 644 /usr/include/xc.h
+	mkdir -p $(prefix)/usr/lib
+	mkdir -p $(prefix)/usr/include
+	cp -a $(LIB) $(prefix)/usr/lib
+	chmod 755 $(prefix)/usr/lib/$(LIB)
+	cp xc.h $(prefix)/usr/include
+	chmod 644 $(prefix)/usr/include/xc.h
 
 dist: all
 	mkdir -p ../../../../install/lib
 	mkdir -p ../../../../install/include
-	cp $(LIB) ../../../../install/lib
+	cp -a $(LIB) ../../../../install/lib
 	chmod 755 ../../../../install/lib/$(LIB)
 	cp xc.h ../../../../install/include
 	chmod 644 ../../../../install/include/xc.h
@@ -46,8 +50,12 @@ rpm: all
 	mv staging/i386/*.rpm .
 	rm -rf staging
 
-libxc.so: $(OBJS)
-	$(LD) -shared -o $@ $^ -lz
+libxc.so:
+	ln -sf libxc.so.$(MAJOR) $@
+libxc.so.$(MAJOR):
+	ln -sf libxc.so.$(MAJOR).$(MINOR) $@
+libxc.so.$(MAJOR).$(MINOR): $(OBJS)
+	$(CC) -Wl,-soname -Wl,$(SONAME) -shared -o $@ $^ -lz
 
 %.o: %.c $(HDRS) Makefile
 	$(CC) $(CFLAGS) -o $@ $<
