bitkeeper revision 1.768 (404909ffr4wvLzxTHDh9qHzdwhs66A)
Makefile, xen-clone, Xeno-HOWTO.txt:
  Fix XL makefile to accept ARCH override from the environment.

--- a/xenolinux-2.4.25-sparse/Makefile
+++ b/xenolinux-2.4.25-sparse/Makefile
@@ -9,7 +9,7 @@ KERNELRELEASE=$(VERSION).$(PATCHLEVEL).$(SUBLEVEL)$(EXTRAVERSION)
 # Unless overridden, by default ARCH is equivalent to SUBARCH.
 # This will be overriden for Xen and UML builds.
 SUBARCH := $(shell uname -m | sed -e s/i.86/i386/ -e s/sun4u/sparc64/ -e s/arm.*/arm/ -e s/sa110/arm/)
-ARCH := $(SUBARCH)
+ARCH ?= $(SUBARCH)
 
 KERNELPATH=kernel-$(shell echo $(KERNELRELEASE) | sed -e "s/-//g")
 
