bitkeeper revision 1.773 (404f1c2crOagpEppZ6uF3JohTX-G5g)
xen.patchF

--- a/xen/common/Makefile
+++ b/xen/common/Makefile
@@ -2,7 +2,7 @@
 include $(BASEDIR)/Rules.mk
 
 default: $(OBJS)
-	$(LD) -r -o common.o $(OBJS)
+	$(LD) $(LDARCHFLAGS) -r -o common.o $(OBJS)
 
 clean:
 	rm -f *.o *~ core
