bitkeeper revision 1.774 (404f2922lDs3mYMJSQMNXaghfGVTFA)
config.h, hypervisor-if.h, Makefile:
  Cleanups.
hypervisor-if.h:
  Rename: xen/include/hypervisor-ifs/arch-x86_64/hypervisor-if-arch.h -> xen/include/hypervisor-ifs/arch-x86_64/hypervisor-if.h
  Rename: xen/include/hypervisor-ifs/arch-i386/hypervisor-if-arch.h -> xen/include/hypervisor-ifs/arch-i386/hypervisor-if.h
hypervisor-if-arch.h:
  mvdir

--- a/xen/Makefile
+++ b/xen/Makefile
@@ -45,10 +45,10 @@ $(TARGET): delete-unfresh-files make-links $(GENERATED_FILES)
 make-links: delete-links
 	ln -sf xeno include/linux
 	ln -sf asm-$(ARCH) include/asm
-	ln -sf if-$(ARCH) include/hypervisor-ifs/if-arch
+	ln -sf arch-$(ARCH) include/hypervisor-ifs/arch
 
 delete-links:
-	rm -f include/linux include/asm include/hypervisor-ifs/if-arch
+	rm -f include/linux include/asm include/hypervisor-ifs/arch
 
 # Blow away kernel.o because build info is stored statically within it.
 delete-unfresh-files:
