bitkeeper revision 1.778 (404f5c24HB4-3O5d1LoEBPgmh5h6tg)
Makefile:
  Create Xen interface symlink.
time.c, hypervisor-if.h, kernel.c:
  Fix shared_info to make CPU TSC arch-dependent.

--- a/xenolinux-2.4.25-sparse/arch/xeno/Makefile
+++ b/xenolinux-2.4.25-sparse/arch/xeno/Makefile
@@ -111,6 +111,9 @@ archclean:
 	@$(MAKEBOOT) clean
 
 archmrproper:
+	rm -f include/asm-xeno/hypervisor-ifs/arch
 
 archdep:
+	rm -f include/asm-xeno/hypervisor-ifs/arch
+	( cd include/asm-xeno/hypervisor-ifs ; ln -sf arch-$(SUBARCH) arch)
 	@$(MAKEBOOT) dep
