bitkeeper revision 1.789 (4051dba62id7XBLQIfBX2kqtjQJzfQ)
physirq.c, pci-pc.c, pci-irq.c, pci-i386.h, pci-i386.c, pci-dma.c, physdev.h:
  new file
Many files:
  Second half of Rolf's IO patch.

--- a/xenolinux-2.4.25-sparse/arch/xeno/config.in
+++ b/xenolinux-2.4.25-sparse/arch/xeno/config.in
@@ -104,6 +104,12 @@ comment 'General setup'
 
 bool 'Networking support' CONFIG_NET
 
+bool 'PCI support' CONFIG_PCI
+if [ "$CONFIG_PCI" = "y" ]; then
+   tristate '    3c590/3c900 series (592/595/597) "Vortex/Boomerang" support' CONFIG_VORTEX
+fi
+source drivers/pci/Config.in
+
 bool 'System V IPC' CONFIG_SYSVIPC
 bool 'BSD Process Accounting' CONFIG_BSD_PROCESS_ACCT
 bool 'Sysctl support' CONFIG_SYSCTL
