--- a/xenolinux-2.4.25-sparse/arch/xeno/kernel/Makefile
+++ b/xenolinux-2.4.25-sparse/arch/xeno/kernel/Makefile
@@ -10,6 +10,10 @@ export-objs     := i386_ksyms.o
 
 obj-y	:= process.o semaphore.o signal.o entry.o traps.o irq.o  \
 		ptrace.o ioport.o ldt.o setup.o time.o sys_i386.o \
-		i386_ksyms.o i387.o hypervisor.o
+		i386_ksyms.o i387.o hypervisor.o physirq.o pci-dma.o
+
+ifdef CONFIG_PCI
+obj-y	+= pci-i386.o pci-pc.o pci-irq.o
+endif
 
 include $(TOPDIR)/Rules.make
