bitkeeper revision 1.795 (4054a3055ggg3MJTpSU1-ZFQRfQQ5g)
xend.py, setup.py:
  new file
Many files:
  Rewritten the Xen control daemon in Python, with C extensions for the low-level bits. All our Python libraries now throw exceptions on error rather than returning error codes --- this will require our higher-level scripts to be updated at some point.

--- a/tools/xend/Makefile
+++ b/tools/xend/Makefile
@@ -1,27 +1,24 @@
 
-CC       = gcc
-CFLAGS   = -Wall -O3 
-CFLAGS  += -I../xc/lib -I../../xenolinux-sparse/include
-
-HDRS     = $(wildcard *.h)
-OBJS     = $(patsubst %.c,%.o,$(wildcard *.c))
-
-BIN      = xend
-
-all: $(BIN)
+all:
+	python setup.py build
 
 install: all
-	mkdir -p $(prefix)/usr/sbin
-	cp $(BIN) $(prefix)/usr/sbin
-	chmod 755 $(prefix)/usr/sbin/$(BIN)
+	if [ "$(prefix)" = "" ]; then python setup.py install; \
+	else python setup.py install --root "$(prefix)"; fi
+	install --mode=755 xend.py $(prefix)/usr/sbin
+	ln -sf xend.py $(prefix)/usr/sbin/xend
 
 dist: all
-	mkdir -p ../../../install/sbin
-	cp $(BIN) ../../../install/sbin
-	chmod 755 ../../../install/sbin/$(BIN)
+	mkdir -p ../../../../install/lib/python
+	for i in `find . -name 'xend_utils.so'` ; do           \
+		install --mode=755 $$i ../../../../install/lib/python/`basename $$i` ; \
+	done
+	python -c 'import py_compile, sys; py_compile.compile("XenoUtil.py")'
+	install --mode=755 xend.py ../../../../install/sbin
+	ln -sf xend.py ../../../../install/sbin/xend
 
 clean:
-	$(RM) *.a *.so *.o *.rpm $(BIN)
+	rm -rf build *.pyc *.pyo *.a *.so *.o *~ *.rpm 
 
 $(BIN): $(OBJS)
 	$(CC) -o $@ $^ -L../xc/lib -lxc
