bitkeeper revision 1.796 (4055ada1c5nV7AgvKi2Y_vrxKyA7CA)
manager.py, console.py, __init__.py:
  new file
setup.py, utils.c, main.py, Makefile:
  Refactor the Xen daemon.
main.py:
  Rename: tools/xend/xend.py -> tools/xend/lib/main.py
utils.c:
  Rename: tools/xend/xend_utils.c -> tools/xend/lib/utils.c

--- a/tools/xend/Makefile
+++ b/tools/xend/Makefile
@@ -5,8 +5,7 @@ all:
 install: all
 	if [ "$(prefix)" = "" ]; then python setup.py install; \
 	else python setup.py install --root "$(prefix)"; fi
-	install --mode=755 xend.py $(prefix)/usr/sbin
-	ln -sf xend.py $(prefix)/usr/sbin/xend
+	install --mode=755 xend $(prefix)/usr/sbin
 
 dist: all
 	mkdir -p ../../../../install/lib/python
@@ -14,8 +13,7 @@ dist: all
 		install --mode=755 $$i ../../../../install/lib/python/`basename $$i` ; \
 	done
 	python -c 'import py_compile, sys; py_compile.compile("XenoUtil.py")'
-	install --mode=755 xend.py ../../../../install/sbin
-	ln -sf xend.py ../../../../install/sbin/xend
+	install --mode=755 xend ../../../../install/sbin
 
 clean:
 	rm -rf build *.pyc *.pyo *.a *.so *.o *~ *.rpm 
