--- a/tools/xentrace/Makefile
+++ b/tools/xentrace/Makefile
@@ -17,19 +17,9 @@ install: all
 	mkdir -p $(prefix)/usr/bin
 	mkdir -p $(prefix)/usr/man/man1
 	mkdir -p $(prefix)/usr/man/man8
-	cp $(BIN) $(prefix)/usr/bin
-	for i in $(BIN); do chmod 755 $(prefix)/usr/bin/$$i; done
-	for i in $(MAN1); do cp $$i $(prefix)/usr/man/man1/$$i; done
-	for i in $(MAN8); do cp $$i $(prefix)/usr/man/man8/$$i; done
-
-dist: all
-	mkdir -p ../../../install/bin
-	mkdir -p ../../../install/man/man1
-	mkdir -p ../../../install/man/man8
-	cp $(BIN) ../../../install/bin
-	for i in $(BIN); do chmod 755 ../../../install/bin/$$i; done
-	for i in $(MAN1); do cp $$i ../../../install/man/man1/$$i; done
-	for i in $(MAN8); do cp $$i ../../../install/man/man8/$$i; done
+	install -m0755 $(BIN) $(prefix)/usr/bin
+	install -m0644 $(MAN1) $(prefix)/usr/man/man1
+	install -m0644 $(MAN8) $(prefix)/usr/man/man8
 
 clean:
 	$(RM) *.a *.so *.o *.rpm $(BIN)
