bitkeeper revision 1.798 (4055c7b4y-9JnLpUiv1ACLKPlRrtRQ)
mkbuildtree, Makefile:
  Fix mkbuildtree for Xenolinux.

--- a/xenolinux-2.4.25-sparse/arch/xeno/Makefile
+++ b/xenolinux-2.4.25-sparse/arch/xeno/Makefile
@@ -115,5 +115,5 @@ archmrproper:
 
 archdep:
 	rm -f include/asm-xeno/hypervisor-ifs/arch
-	( cd include/asm-xeno/hypervisor-ifs ; ln -sf arch-$(SUBARCH) arch)
+	( cd include/asm-xeno/hypervisor-ifs ; rm -rf arch ; ln -sf arch-$(SUBARCH) arch)
 	@$(MAKEBOOT) dep
