bitkeeper revision 1.809 (4059b6abq9zvnfmJ9cVcMhBo_lOhew)
Many files:
  Scheduler updates.
sched_ctl.h:
  Rename: xen/include/hypervisor-ifs/sched-ctl.h -> xen/include/hypervisor-ifs/sched_ctl.h

--- a/tools/xend/Makefile
+++ b/tools/xend/Makefile
@@ -4,7 +4,7 @@ all:
 
 install: all
 	if [ "$(prefix)" = "" ]; then python setup.py install; \
-	else python setup.py install --home="$(prefix)"; fi
+	else python setup.py install --root="$(prefix)"; fi
 	mkdir -p $(prefix)/usr/sbin
 	install -m0755 xend $(prefix)/usr/sbin
 
