bitkeeper revision 1.810 (4059c6e8EQAxVfRpkNjdygO1O6otTQ)
schedule.c, sched_bvt.c, main.py, Makefile, setup.py, Xc.c:
  Python tool fixes.
tempfile.py:
  new file

--- a/tools/xc/py/Makefile
+++ b/tools/xc/py/Makefile
@@ -3,8 +3,13 @@ all:
 	python setup.py build
 
 install: all
-	if [ "$(prefix)" = "" ]; then python setup.py install; \
-	else python setup.py install --root="$(prefix)"; fi
+	if [ "$(prefix)" = "" ]; then                   \
+	    python setup.py install;                    \
+	elif [ "$(dist)" = "yes" ]; then                \
+	    python setup.py install --home="$(prefix)"; \
+	else                                            \
+	    python setup.py install --root="$(prefix)"; \
+	fi
 
 clean:
 	rm -rf build *.pyc *.pyo *.o *.a *~
