bitkeeper revision 1.819 (405ff597IZG6ZJZ_KUXF4rm3sEo57A)
console_client.py, xencons, Makefile, Console-HOWTO.txt:
  Console and controller modifications.
xend:
  new file
xendomains:
  Rename: tools/examples/xendomains -> tools/examples/init.d/xendomains

--- a/tools/examples/Makefile
+++ b/tools/examples/Makefile
@@ -1,7 +1,7 @@
 
 INSTALL  = $(wildcard *.py)
 ETC	 = defaults democd netbsd
-INITD    = xendomains
+INITD    = init.d/xendomains init.d/xend
 
 all: 
 
