--- a/xenolinux-2.4.25-sparse/arch/xeno/config.in
+++ b/xenolinux-2.4.25-sparse/arch/xeno/config.in
@@ -107,6 +107,10 @@ bool 'Networking support' CONFIG_NET
 bool 'PCI support' CONFIG_PCI
 if [ "$CONFIG_PCI" = "y" ]; then
    tristate '    3c590/3c900 series (592/595/597) "Vortex/Boomerang" support' CONFIG_VORTEX
+   tristate 'Intel(R) PRO/1000 Gigabit Ethernet support' CONFIG_E1000
+   if [ "$CONFIG_E1000" != "n" ]; then
+      bool '  Use Rx Polling (NAPI)' CONFIG_E1000_NAPI
+   fi
 fi
 source drivers/pci/Config.in
 
