--- a/xenolinux-2.4.25-sparse/arch/xeno/boot/Makefile
+++ b/xenolinux-2.4.25-sparse/arch/xeno/boot/Makefile
@@ -6,8 +6,8 @@ xenolinux.gz: xenolinux
 	gzip -f -9 < $< > $@
 
 xenolinux: $(TOPDIR)/vmlinux
-	# Guest OS header -- first 8 bytes are identifier 'XenoGues'.
-	echo -e -n 'XenoGues' >$@ 
+	# Guest OS header -- first 8 bytes are identifier 'XenGuest'.
+	echo -e -n 'XenGuest' >$@ 
 	# Guest OS header -- next 4 bytes are load address (0xC0000000).
 	echo -e -n '\000\000\000\300' >>$@
 	$(OBJCOPY) $< xenolinux.body
