bitkeeper revision 1.824 (40601cf9uRnKyyagj6umr4Oaf_-gWQ)
Many files:
  xeno -> xen renames.
xen_proc.c:
  Rename: xenolinux-2.4.25-sparse/arch/xen/lib/xeno_proc.c -> xenolinux-2.4.25-sparse/arch/xen/lib/xen_proc.c
xen_proc.h:
  Rename: xenolinux-2.4.25-sparse/include/asm-xen/xeno_proc.h -> xenolinux-2.4.25-sparse/include/asm-xen/xen_proc.h
Xen-HOWTO.txt:
  Rename: docs/Xeno-HOWTO.txt -> docs/Xen-HOWTO.txt

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -21,7 +21,7 @@ clean:
 
 install: $(DOCUMENTS)
 	mkdir -p $(prefix)/usr/share/doc/xen
-	cp -a $(DOCUMENTS) VBD-HOWTO.txt Xeno-1.2-HOWTO.txt $(prefix)/usr/share/doc/xen
+	cp -a $(DOCUMENTS) VBD-HOWTO.txt Xen-HOWTO.txt $(prefix)/usr/share/doc/xen
 
 %.pdf: %.ps
 	ps2pdf $< $@
