--- a/xenolinux-2.4.25-sparse/Makefile
+++ b/xenolinux-2.4.25-sparse/Makefile
@@ -10,7 +10,12 @@ KERNELRELEASE=$(VERSION).$(PATCHLEVEL).$(SUBLEVEL)$(EXTRAVERSION)
 # This will be overriden for Xen and UML builds.
 SUBARCH := $(shell uname -m | sed -e s/i.86/i386/ -e s/sun4u/sparc64/ -e s/arm.*/arm/ -e s/sa110/arm/)
 ARCH ?= $(SUBARCH)
-ARCH := $(ARCH:xeno=xen) ## Temporary hack while users adjust to new archname
+
+## XXX The following hack can be discarded after users have adjusted to the
+## architectural name change 'xeno' -> 'xen'.
+ifeq ($(ARCH),xeno)
+  ARCH := xen
+endif
 
 KERNELPATH=kernel-$(shell echo $(KERNELRELEASE) | sed -e "s/-//g")
 
