bitkeeper revision 1.825.3.6 (4064639dGSejbtZOrnsOB_IspAZ6kw)
blkdev.h, pci.c, Makefile, domain.c, setup.c, entry.S, Rules.mk:
  Allow Xen to be built without device drivers using 'nodev=y make'.

--- a/xen/drivers/Makefile
+++ b/xen/drivers/Makefile
@@ -3,11 +3,13 @@ default:
 	$(MAKE) -C char
 	$(MAKE) -C pci
 	$(MAKE) -C net
-	$(MAKE) -C block
-	$(MAKE) -C cdrom
-	$(MAKE) -C ide
-	$(MAKE) -C scsi
-	$(MAKE) -C message/fusion
+	if [ "$(nodev)" != "y" ]; then \
+	$(MAKE) -C block ; \
+	$(MAKE) -C cdrom ; \
+	$(MAKE) -C ide ; \
+	$(MAKE) -C scsi ; \
+	$(MAKE) -C message/fusion ; \
+	fi
 
 clean:
 	$(MAKE) -C char clean
