bitkeeper revision 1.825.3.13 (4067341aEVBylJ8rvZlNJ-_l5YeAoQ)
mkbuildtree, pci-pc.c, Makefile, defconfig-physdev, physdev.h, physdev.c:
  PCI-access updates for new IO world.
.del-pci-irq.c~626134b3f85d1f48:
  Delete: xenolinux-2.4.25-sparse/arch/xen/kernel/pci-irq.c
.del-pci-i386.h~17514121c175844:
  Delete: xenolinux-2.4.25-sparse/arch/xen/kernel/pci-i386.h
.del-pci-i386.c~d13b1a4728189770:
  Delete: xenolinux-2.4.25-sparse/arch/xen/kernel/pci-i386.c

--- a/xenolinux-2.4.25-sparse/arch/xen/kernel/Makefile
+++ b/xenolinux-2.4.25-sparse/arch/xen/kernel/Makefile
@@ -13,7 +13,7 @@ obj-y	:= process.o semaphore.o signal.o entry.o traps.o irq.o  \
 		i386_ksyms.o i387.o evtchn.o pci-dma.o
 
 ifdef CONFIG_PCI
-obj-y	+= pci-i386.o pci-pc.o pci-irq.o
+obj-y	+= pci-i386.o pci-pc.o
 endif
 
 include $(TOPDIR)/Rules.make
