bitkeeper revision 1.825.3.24 (406d89edLT2FcNiTizRzrDacuMdqRQ)
Makefile:
  Don't overwrite existing defaults files during install.

--- a/tools/examples/Makefile
+++ b/tools/examples/Makefile
@@ -11,7 +11,10 @@ install: all
 	mkdir -p $(prefix)/etc/xc/auto
 	mkdir -p $(prefix)/etc/init.d
 	install -m0755 $(INSTALL) $(prefix)/usr/bin
-	install -m0644 $(ETC) $(prefix)/etc/xc
+	for i in $(ETC); \
+	    do [ -a $(prefix)/etc/xc/$$i ] || \
+	    install -m0644 $$i $(prefix)/etc/xc; \
+	done
 	install -m0755 $(INITD) $(prefix)/etc/init.d
 
 clean:
