bitkeeper revision 1.838 (406ee03fYGZuu3lTbdwwYlwJxSLZtw)
shadow.h, perfc.h, memory.c, keyhandler.c, Makefile, irq.c, Rules.mk:
  Code and build cleanups. Allow perf counters to be disabled at build time by 'nperfc=y'. Allow debugging to be turned on with 'debug=y'.

--- a/xen/common/Makefile
+++ b/xen/common/Makefile
@@ -1,6 +1,10 @@
 
 include $(BASEDIR)/Rules.mk
 
+ifeq ($(nperfc),y)
+OBJS := $(subst perfc.o,,$(OBJS))
+endif
+
 default: $(OBJS)
 	$(LD) $(LDARCHFLAGS) -r -o common.o $(OBJS)
 
