bitkeeper revision 1.839 (406ee643kSLveMGyvVob0usRgg-CGg)
vif.h, Makefile, domain.c, setup.c, entry.S, Rules.mk:
  Completely remove networking support from Xen when 'nodev=y' is specified.

--- a/xen/Makefile
+++ b/xen/Makefile
@@ -36,7 +36,9 @@ clean: delete-links
 $(TARGET): delete-unfresh-files make-links $(GENERATED_FILES)
 	$(MAKE) -C tools
 	$(MAKE) -C common
-	$(MAKE) -C net
+	if [ "$(nodev)" != "y" ]; then \
+	$(MAKE) -C net ; \
+	fi
 	$(MAKE) -C drivers
 	$(MAKE) -C arch/$(TARGET_ARCH)
 
