--- a/xen/common/Makefile
+++ b/xen/common/Makefile
@@ -5,6 +5,10 @@ ifeq ($(nperfc),y)
 OBJS := $(subst perfc.o,,$(OBJS))
 endif
 
+ifeq ($(nodev),y)
+OBJS := $(subst network.o,,$(OBJS))
+endif
+
 default: $(OBJS)
 	$(LD) $(LDARCHFLAGS) -r -o common.o $(OBJS)
 
