--- a/xen/drivers/Makefile
+++ b/xen/drivers/Makefile
@@ -2,8 +2,8 @@
 default:
 	$(MAKE) -C char
 	$(MAKE) -C pci
-	$(MAKE) -C net
 	if [ "$(nodev)" != "y" ]; then \
+	$(MAKE) -C net ; \
 	$(MAKE) -C block ; \
 	$(MAKE) -C cdrom ; \
 	$(MAKE) -C ide ; \
